--- a/q2/client/index.html
+++ b/q2/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moonshot 1: Email Client</title>
+    <title>Moonshot 2: Data visualization and filtering</title>
   </head>
   <body>
     <div id="root"></div>
